<resources>

    <string name="app_name">拍照识植物</string>
    <string name="mine">我的</string>
    <string name="find_more">发现</string>
    <string name="search_history">我都搜过…</string>
    <string name="hot_search">识物小热搜</string>
    <string name="quick_search">快速查询</string>
    <string name="train_detail">后台训练详情</string>
    <string name="no_hit_rates">后台无hitRates</string>
    <string name="i_know">我知道了</string>
    <string name="item_name">物体名称</string>
    <string name="detail_desc">详细资料</string>
    <string name="item_type">物品类别</string>
    <string name="item_desc">暂无 %s 的详细资料</string>
    <string name="search_time">时间: %s</string>
    <string name="preview">预览</string>
    <string name="confirm">确定</string>
    <string name="please_wait">请稍后</string>
    <string name="uploading">上传中</string>
    <string name="querying">查询中</string>
    <string name="default_nickname">设置昵称…</string>
    <string name="usrid">用户ID: %s</string>
    <string name="copyright_zh">陈星宇 版权所有</string>
    <string name="copyright_en">Copyright ©️2020–2021 xingyuuchen. All Rights Reserved.</string>
    <string name="goto_change_nickname">>></string>
    <string name="loading">加载中…</string>
    <string name="hot_search_heat">热度: %d</string>


    <string name="bg_img">bg_img</string>
    <string name="bg_mask">bg_mask</string>
    <string name="detail_item_iv">detail_item_iv</string>

</resources>